--- a/src/nr_deckbuilder.ui
+++ b/src/nr_deckbuilder.ui
@@ -506,16 +506,35 @@
               </packing>
             </child>
             <child>
-              <object class="GtkScrolledWindow" id="scrolledwindow2">
+              <object class="GtkVBox" id="vbox3">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="hscrollbar_policy">automatic</property>
-                <property name="vscrollbar_policy">automatic</property>
+                <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkTreeView" id="decktreeview">
+                  <object class="GtkScrolledWindow" id="scrolledwindow2">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hscrollbar_policy">automatic</property>
+                    <property name="vscrollbar_policy">automatic</property>
+                    <child>
+                      <object class="GtkTreeView" id="decktreeview">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                      </object>
+                    </child>
                   </object>
+                  <packing>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkStatusbar" id="deckstatusbar">
+                    <property name="visible">True</property>
+                    <property name="spacing">2</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="position">1</property>
+                  </packing>
                 </child>
               </object>
               <packing>
@@ -529,6 +548,57 @@
             <property name="shrink">True</property>
           </packing>
         </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkMenu" id="searchmenu">
+    <property name="visible">True</property>
+    <child>
+      <object class="GtkMenuItem" id="menuitem-search-name">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Search by name</property>
+        <property name="use_underline">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="menuitem-search-type">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Search by type</property>
+        <property name="use_underline">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="menuitem-search-key">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Search by keyword</property>
+        <property name="use_underline">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="menuitem-search-text">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Search in text</property>
+        <property name="use_underline">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="menuitem-search-all">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Search in all fields</property>
+        <property name="use_underline">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkSeparatorMenuItem" id="menuitem5">
+        <property name="visible">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkMenuItem" id="menuitem-search-adv">
+        <property name="visible">True</property>
+        <property name="tooltip_text" translatable="yes">You may type an SQL *where* expression to seek in database</property>
+        <property name="label" translatable="yes">Advanced search: SQL expression</property>
+        <property name="use_underline">True</property>
       </object>
     </child>
   </object>
